Updated QUIZ attempted again
